[package]
name = "openapi-dry-schema-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
la-arena = "0.2"
openapiv3 = "1.0"
serde_json = "1.0"
convert_case = "0.6"

[dev-dependencies]
expect-test = "1.4"
