[package]
name = "openapi-dry-validation-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
la-arena = "0.3"
openapiv3 = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
convert_case = "0.6"
clap = { version = "4.4.12", features = ["derive"] }
url = "2.4.0"
reqwest = { version = "0.11", features = ["blocking"] }

[dev-dependencies]
expect-test = "1.4"
httptest = "0.15"
